--- a/resources/scss/Frontend/globals.scss
+++ b/resources/scss/Frontend/globals.scss
@@ -24,6 +24,33 @@
 @import "shortcode/footer";
 @import "common/rtl";
 
+
+.cs-site_header.cs-style1 .cs-main_header_right {
+    display: none;
+}
+.cs-verification-form .cs-form-group label {
+    float: left;
+    font-weight: 700;
+    font-size: 14px;
+}
+.cstm-map-marker li{
+  padding:0px !important;
+}
+.cstm-map-marker li>span{
+  text-decoration: underline;
+    color: #789262;
+}
+.cs-iconbox.cs-style1 .cs-iconbox_title
+ {
+    font-size: 18px;
+}
+.cs-main_header_center .cs-nav_list>li>a:hover {
+    color: #ffd364;
+}
+.cs-style1 .cs-iconbox_icon img {
+    border-radius: 50px;
+    box-shadow: 5px 5px 10px 0px #333;
+}
 // slider css
 .swiper-horizontal > .swiper-pagination {
     bottom: 52px !important;
@@ -33,3 +60,54 @@
         bottom: 30pxpx !important;
     }
 }
+
+.cs-announcements-widget {
+    background: #f8f8f8;
+    padding: 20px;
+    border: 1px solid #ddd;
+    height: 300px;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .cs-announcements-title {
+    font-size: 18px;
+    margin-bottom: 15px;
+  }
+  
+  .cs-marquee-container {
+    height: 230px;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .cs-marquee-content {
+    display: inline-block;
+    animation: scroll-up 10s linear infinite;
+  }
+  
+  .cs-marquee-container:hover .cs-marquee-content {
+    animation-play-state: paused;
+  }
+  
+  .cs-marquee-content ul {
+    padding-left: 18px;
+    margin: 0;
+    list-style: disc;
+  }
+  
+  .cs-marquee-content li {
+    margin-bottom: 12px;
+    font-size: 14px;
+  }
+  
+  /* Animation */
+  @keyframes scroll-up {
+    0% {
+      transform: translateY(0);
+    }
+    100% {
+      transform: translateY(-100%);
+    }
+  }
+  
