--- a/resources/scss/Frontend/shortcode/hero.scss
+++ b/resources/scss/Frontend/shortcode/hero.scss
@@ -22,9 +22,9 @@
     top: 0;
     opacity: 0.5;
 }
-.cs-hero_text:after {
+.cs-hero_title:after {
     content: "فضائی آلودگی کی روک تھام اور سیفٹی قوانین کی پاسداری ... ہم سب کی اخلاقی و قانونی ذمہ داری";
-    font-size: 40px;
+    font-size: 30px;
     color: #fff;
     font-weight: bold;
     line-height: 56px;
@@ -95,7 +95,7 @@
     height: calc(100vh + 180px);
     min-height: 1000px;
     .cs-hero_title {
-        font-size: 70px;
+        font-size: 35px;
         font-weight: 700;
         margin-bottom: 60px;
         line-height: 1.25em;
